# DG-SparseGrid

./: .gitignore  .gitlab-ci.yml  AdapTestHyper_1D.m  AdapTestHyper_1D.m~  AdapTest_1D.m  AdapTest_1D.m~  CMakeLists.txt  ComputeBC.m  ComputeRHS.m  Compute_2D_sparsegrid.m  Connect2D.m  ConnectnD.m  DG_SG.m  DIMENSION.m  DIV.m  DIV_OR_GRAD.m  EQUATION.m  EULER_1D.m  EvalWavPoint4.m  GLOBAL_SOLUTION_VECTOR.m  GLOBAL_SOLUTION_VECTOR_UTILITIES.m  GRAD.m  GlobalMatrixSG.m  GlobalMatrixSG.m~  GlobalMatrixSG_SlowVersion.m  GlobalMatrixSG_SlowVersion_newCon.m  GlobalMatrixSG_newCon.m  GlobalMatrixSG_old.m  GlobalMatrixSG_old.m~  GlobalMatrixSG_working.m  Grid2Dof.m  HashTable.m  HashTable2.m  HashTable2.m~  HashTable2D.m  Intial_Con.m  LENARD_BERNSTEIN_1X1V.m  LevCell2ElementIndex.m  LevCell2index.m  LevCell2index_set.m  (+318 more)
1D Implicit/: 4thOrderTimeStepping.m  CheckIm.m  CheckLev9.m  DifferentScheme.m  FixTest.m  ImplicitResult.m  ImplicitTime1.m  ImplicitTime2.m  Matrix_TI.m  Maxwell1.m  Maxwell10.m  Maxwell11.m  Maxwell12.m  Maxwell2.m  Maxwell3.m  Maxwell4.m  Maxwell5.m  Maxwell6.m  Maxwell7.m  Maxwell8.m  Maxwell9.m  MaxwellSolver.m  MaxwellSolver1.m  MaxwellSolver10.m  MaxwellSolver11.m  MaxwellSolver2.m  MaxwellSolver3.m  MaxwellSolver4.m  MaxwellSolver7.m  MaxwellSolver8.m  MaxwellSolver9.m  TestTrape.m  TestTrape.m~  TimePeriod.m  _DS_Store  main_Maxwell.m  main_Maxwell1.m  main_Maxwell2.m  main_Maxwell3.m  main_Maxwell4.m  (+3 more)
1D-Test/: Matrix_Recur.m  main_Vlasov.m  main_Vlasov.m~  matrix_coeff_TI_v3.m  matrix_coeff_TI_v3.m~  (+1 more)
AMGX_tests/: CMakeLists.txt  README.md  main.cpp
(+1558 files in other folders)
